objects/Customer_Business_Priority__c.object
<CustomObject>
    <fields>
        <fullName>Account_Plan__c</fullName>
        <label>Account Plan</label>
        <referenceTo>Account_Plan__c</referenceTo>
        <relationshipLabel>Customer Business Priorities</relationshipLabel>
        <relationshipName>Customer_Business_Priorities</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Detailed_Description__c</fullName>
        <label>Detailed Description</label>
        <length>3000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Expected_Outcome__c</fullName>
        <label>Expected Outcome</label>
        <length>3000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Short_Description__c</fullName>
        <label>Short Description</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Timing__c</fullName>
        <label>Timing</label>
        <picklist>
            <picklistValues>
                <fullName>Less than 1 year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 - 3 years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greater than 3 years</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Customer Business Priority</label>
    <nameField>
        <label>Customer Business Priority Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Business Priority</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>